# miniResearchAgent

./: .gitignore  README.md
ResearchAgent/: .gitignore  cli.py  evaluate.py  main.py  pyproject.toml  requirement.txt  requirements.txt  research_checkpoints.db  terminal_chat.py
ResearchAgent/ResearchAgent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ResearchAgent/agents/: agentic_rag.py  chat_agent.py  deep_graph.py  state.py  tools.py
ResearchAgent/core/: config.py  llm.py  logger.py  prompt_manager.py
ResearchAgent/prompts/: agents_prompt.json
ResearchAgent/rag/: local_tools.py  memory_store.py  vector_store.py
deep_research_backend/: .gitignore  evaluate.py  main.py  terminal_chat.py
deep_research_backend/agents/: chat_agent.py  deep_graph.py
deep_research_backend/core/: logger.py
deep_research_backend/rag/: vector_store.py
minideepResearch/: docker-compose.yaml  package-lock.json  package.json
minideepResearch/README/: 1_route.md  2_architecture.md  3_core_logic.md  4_components_ui.md  5_interview_value.md  user_note.md  阅读路径.md
minideepResearch/README/profile/: project_analysis.md
minideepResearch/prisma/: schema.prisma
minideepResearch/scripts/: M1_1_test-db.ts  M2_1_test-agent.ts  M2_debug_1_debug-env.ts  M2_debug_2_diagnose.ts  M2_debug_3_verify-key.ts
minideepResearch/src/agents/: deepGraph.ts  graph.ts  state.ts  tools.ts
minideepResearch/src/app/: globals.css  layout.tsx  page.tsx  page_before_m4.tsx.txt  page_before_m5.tsx.txt  page_m5.tsx.txt  page_m7.tsx.txt  page_m9.tsx.txt
minideepResearch/src/lib/: clipboardUtils.ts  (+3 more)
(+34 files in other folders)
